# metatrader-ai

./: .gitignore  README.md
context/: mql.md  prompt.md  python.md
mql/: agent.mqh  app.ex5  app.mq5  llm.mqh
mql/tests/: agent.mq5  history.mq5  order.mq5  position.mq5  symbol.mq5
mql/tools/: Chart-Draw.mqh  JB-Array.mqh  JB-Backtest.mqh  JB-Indicator.mqh  backtesting.mqh  chart.mqh  compile.mqh  constants.mqh  context.mqh  dispatch.mqh  file.mqh  indicators.mqh  mt5.mqh  requests.mqh  terminal.mqh  tool.mqh  tools.mqh
mql/tools/fxsaber/MultiTester/: MultiTester.mqh  Settings.mqh  String.mqh  Task.mqh  TesterSettings.mqh
mql/tools/fxsaber/SingleTesterCache/: ExpTradeSummarySingle.mqh  String.mqh  TesterPositionProfit.mqh  TesterTradeState.mqh  TradeOrder.mqh
mql/tools/fxsaber/TesterCache/: TestCacheInput.mqh  TesterCache.mqh
python/: README.md  agent.py  app.py  pyproject.toml  requirements.txt
python/metatrader_ai/: __init__.py  agent.py  app.py  cli.py  llm.py
python/metatrader_ai/context/: trade.md
python/metatrader_ai/tools/: __init__.py  build.py  dispatch.py  mt5.py
python/metatrader_ai/workflows/: response.md
python/tests/: history.py  order.py  position.py  symbol.py
python/tools/: dispatch.py  mt5.py
workflows/: response.md
