[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metatrader-ai"
version = "1.1.0"
description = "An AI-powered trading assistant for MetaTrader 5."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "JBlanked" }]
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
mt5 = [
  "MetaTrader5>=5.0.45",
]

[project.scripts]
metatrader-ai = "metatrader_ai.cli:main"

[tool.setuptools.packages.find]
include = ["metatrader_ai", "metatrader_ai.*"]

[tool.setuptools.package-data]
metatrader_ai = ["context/*.md", "workflows/*.md"]
