[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metatrader-ai"
version = "1.2.2"
description = "An AI-powered trading assistant for MetaTrader 5."
readme = "README.md"
requires-python = ">=3.9.7"
license = "MIT"
authors = [{ name = "JBlanked" }]
dependencies = [
  "requests>=2.32.5",
  "customtkinter==5.2.2",
  "MetaTrader5==5.0.5735",
]

[project.scripts]
metatrader-ai = "metatrader_ai.cli:main"

[tool.setuptools.packages.find]
include = ["metatrader_ai", "metatrader_ai.*"]

[tool.setuptools.package-data]
metatrader_ai = ["context/*.md", "workflows/*.md"]
